--- a/INTERFACES/ASSIGMENT 2/festland.html
+++ b/INTERFACES/ASSIGMENT 2/festland.html
@@ -6,16 +6,16 @@
         <title>FESTLAND</title>
     </head>
     <body>
-        <header>
+        <header style="background-color: #707070;">
             <!-- <img srcset="assets\logo.png" width="300px" height="150px"> -->
             <button>
                 CART
                 <!-- <img srcset="assets\cart.png" width="15px" height="15px"> -->
             </button>
         </header>
-        <section id="page1">
-            <section id="section1_page1">
-                <article>
+        <section id="page1" style="background-color: #707070;">
+            <section id="section1_page1" style="background-color: #868686;">
+                <article style="background-color: #969696;">
                     <span>
                         <h5>
                             <!-- <img srcset="assets\tick.png" width="15px" height="15px"> -->
@@ -23,7 +23,7 @@
                         </h5>
                         <h2>Experience seamless music.</h2>
                         <p>BLABLABLA</p>
-                        <section>
+                        <section style="background-color: #bbbbbb;">
                             <button>GET YOUR TICKET</button>
                             <button>
                                 <!-- <img srcset="assets\play.png" width="15px" height="15px"> -->
@@ -31,17 +31,17 @@
                             </button>
                         </section>
                     </article>
-                    <section>
+                    <section style="background-color: #cacaca;">
                         <figure>
                             <!-- <img srcset="assets\page1.webp" width="525px" height="350px"> -->
                         </figure>
                     </section>
                 </section>
                 <br>
-                <section id="section2_page1">
+                <section id="section2_page1" style="background-color: #575757;">
                     <article>
                         <p>BLABLABLA</p>
-                        <section>
+                        <section style="background-color: #969696;">
                             <button>2017</button>
                             <button>2018</button>
                             <button>2019</button>
@@ -55,15 +55,15 @@
                 <br>
             </section>
             <hr>
-            <section id="page2">
-                <section id="section1_page2">
+            <section id="page2" style="background-color: #926868;">
+                <section id="section1_page2" style="background-color: #a76f6f;">
                     <article>
-                        <section>
+                        <section style="background-color: #854848;">
                             <figure>
                                 <!-- <img srcset="assets\page2.jpg" width="375px" height="250px"> -->
                             </figure>
                         </section>
-                        <article>
+                        <article style="background-color: #643636;">
                             <h3>Discover the Legends: Explore Our Featured Artists</h3>
                             <p>BLABLABLABLA</p>
                             <p>
@@ -74,9 +74,9 @@
                     </article>
                 </section>
                 <br>
-                <section id="section2_page2">
+                <section id="section2_page2" style="background-color: #e06c6c;">
                     <article>
-                        <section>
+                        <section style="background-color: #df1111;">
                             <button>Artists</button>
                             <button>Facilities</button>
                             <button>Camping</button>
@@ -87,12 +87,12 @@
                 <br>
             </section>
             <hr>
-            <section id="page3">
-                <section id="section1_page3">
+            <section id="page3" style="background-color: #9fa823;">
+                <section id="section1_page3" style="background-color: #c8cf5f;">
                     <article>
                         <h3>Music. Redefined.</h3>
                         <p>BLABLABLA</p>
-                        <section>
+                        <section style="background-color: #9fa823;">
                             <figure>
                                 <!-- <img srcset="assets\page3.jpg" width="500px" height="600px"> -->
                             </figure>
@@ -102,12 +102,12 @@
                 <br>
             </section>
             <hr>
-            <section id="page4">
-                <section id="section1_page4">
+            <section id="page4" style="background-color: #26d452;">
+                <section id="section1_page4" style="background-color: #2ca74b;">
                     <article>
                         <h3>Compare Ticket Options and Packages for the Ultimate Festival Experience</h3>
                         <p>BLABLABLA</p>
-                        <section>
+                        <section style="background-color: #3b8a4e;">
                             <button>
                                 <!-- <img srcset="assets\calendar.png" width="15px" height="15px"> -->
                                 3 Days Experience
@@ -138,22 +138,22 @@
                 <br>
             </section>
             <hr>
-            <section id="page5">
-                <section id="section1_page5">
+            <section id="page5" style="background-color: #142896;">
+                <section id="section1_page5" style="background-color: #3a4db4;">
                     <article>
                         <h3>Flexible glamping that adapt to your needs</h3>
                         <p>BLABLABLA</p>
                         <button>3 Days Experience</button>
                     </article>
-                    <section>
+                    <section style="background-color: #4052b6;">
                         <figure>
                             <!-- <img srcset="assets\page5.png" width="150px" height="150px"> -->
                         </figure>
                     </section>
                 </section>
                 <br>
-                <section id="section2_page5">
-                    <article>
+                <section id="section2_page5" style="background-color: #6d7ac4;">
+                    <article style="background-color: #6d7ac4;">
                         <h3>Subscribe to Stay Informed and Get the Latest News!</h3>
                         <p>BLABLABLA</p>
                         <input type="text" placeholder="Enter your email" />
@@ -163,21 +163,21 @@
                 <br>
             </section>
             <hr>
-            <footer>
+            <footer style="background-color: #b124a5;">
                 <!-- Aquí tenemos un botón que habría que hacerle un script para que nos lleve a la parte superior de la página,
                 y que aparezca de forma flotante siempre. -->
                 <button onclick="toTop()" id="topButton" title="Go to top">
                     <!-- <img srcset="assets\up.png" width="15px" height="15px"> -->
                 </button>
-                <section id="section1_footer">
-                    <section id="column1">
+                <section id="section1_footer" style="background-color: #e67fdd;">
+                    <section id="column1" style="background-color: #d19920;">
                         <article>
                             <p><b>Tickets</b></p>
                             <a href="https://www.festland/accesibility.com">Accesibility</a>
                             <a href="https://www.festland/changelog.com">Changelog</a>
                         </article>
                     </section>
-                    <section id="column2">
+                    <section id="column2" style="background-color: #926b17;">
                         <article>
                             <p><b>Customer Support</b></p>
                             <a href="https://www.festland/contact-us.com">Contact</a>
@@ -185,7 +185,7 @@
                             <a href="https://www.festland/redeem.com">Reedem Code</a>
                         </article>
                     </section>
-                    <section id="column3">
+                    <section id="column3" style="background-color: #2c90ca;">
                         <article>
                             <p><b>Corporate</b></p>
                             <a href="https://www.festland/about-us.com">About Us</a>
@@ -194,7 +194,7 @@
                             <a href="https://www.festland/publications.com">Publications</a>
                         </article>
                     </section>
-                    <section id="column4">
+                    <section id="column4" style="background-color: #702dbd;">
                         <article>
                             <p><b>Resources</b></p>
                             <a href="https://www.festland/news.com">What's New</a>
@@ -203,7 +203,7 @@
                             <a href="https://www.festland/press.com">Press</a>
                         </article>
                     </section>
-                    <section id="column5">
+                    <section id="column5" style="background-color: #3a1cbd;">
                         <article>
                             <section>
                                 <p><b>Location</b></p>
@@ -429,7 +429,7 @@
                                     <option value="ZW">Zimbabwe 🇿🇼</option>
                                 </select>
                             </section>
-                            <section>
+                            <section style="background-color: #8d7ed1;">
                                 <a href="https://www.instagram.com">
                                     <!-- <img srcset="assets\instagram.png" alt="instagram" width="15px" height="15px"> -->
                                 </a>
@@ -447,7 +447,7 @@
                     </section>
                 </section>
                 <br>
-                <section id="section2_footer">
+                <section id="section2_footer" style="background-color: #5d45c7;">
                     <span>
                         <a href="https://www.festland/copyright.com">©2024 Festland</a>
                     </span>
