--- a/INTERFACES/ASSIGMENT 3/bloques2.html
+++ b/INTERFACES/ASSIGMENT 3/bloques2.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bloques</title>
-    <link rel="stylesheet" type="text/css" href="bloques2.css">
-</head>
-    <body>
-        <header> &lt;header&gt; </header>
-        <main> &lt;main&gt;
-            <article> &lt;article&gt;
-                <section> &lt;section&gt; </section>
-                <section> &lt;section&gt; </section>
-                <section> &lt;section&gt; </section>
-            </article>
-            <article> &lt;article&gt; </article>
-            <footer> &lt;footer&gt; main </footer>
-        </main>
-        <nav> &lt;nav&gt; </nav>
-        <aside> <b> &lt;aside&gt; </b> </aside>
-        <footer> &lt;footer&gt; page </footer>
-    </body>
+    <link rel="stylesheet" type="text/css" href="bloques2.css" />
+  </head>
+  <body>
+    <header>&lt;header&gt;</header>
+    <main>
+      &lt;main&gt;
+      <article>
+        &lt;article&gt;
+        <section>&lt;section&gt;</section>
+        <section>&lt;section&gt;</section>
+        <section>&lt;section&gt;</section>
+      </article>
+      <article>&lt;article&gt;</article>
+      <footer>&lt;footer&gt; main</footer>
+    </main>
+    <nav>&lt;nav&gt;</nav>
+    <aside><b> &lt;aside&gt; </b></aside>
+    <footer>&lt;footer&gt; page</footer>
+  </body>
 </html>
