--- a/INTERFACES/ASSIGMENT 2/tarjeta.html
+++ b/INTERFACES/ASSIGMENT 2/tarjeta.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <header>
-            <h1>FESTLAND</h1>
+            FESTLAND
         </header>
         <section>
             <article>
@@ -18,14 +18,12 @@
                 <p>¡Ven y únete a nosotros para una experiencia inolvidable!</p>          
             </article>
             <aside>
-                <figure>
-                    <img src="./assets/page1.webp"" alt="Imagen representativa del festival" >
-                </figure>
+                <img src="./assets/page1.webp"" alt="Imagen representativa del festival" >
             </aside>
             </section>
-        <footer>
-            <p>&copy; 2024 Festland. Todos los derechos reservados.</p>
-        </footer>
-    </main>
+            <footer>
+                &copy; 2024 Festland. Todos los derechos reservados.
+            </footer>
+        </main>
 </body>
 </html>
