--- a/INTERFACES/ASSIGMENT 2/tarjeta.html
+++ b/INTERFACES/ASSIGMENT 2/tarjeta.html
@@ -18,7 +18,7 @@
                 <p>¡Ven y únete a nosotros para una experiencia inolvidable!</p>          
             </article>
             <aside>
-                <img src="./assets/page1.webp"" alt="Imagen representativa del festival" >
+                <img src="./assets/page1.webp" alt="Imagen representativa del festival" >
             </aside>
             </section>
             <footer>
