--- a/INTERFACES/ASSIGMENT 6/Práctica3_FlexBox.html
+++ b/INTERFACES/ASSIGMENT 6/Práctica3_FlexBox.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wrike</title>
+    <title>Festland</title>
     <link rel="stylesheet" href="Práctica3_Flexbox.css" />
   </head>
   <body>
@@ -16,8 +16,8 @@
     </header>
     <main>
       <nav>
+        <img id="logo" src="Logo.png" alt="Logo" />
         <section class="sectionLista">
-          <img id="logo" src="Logo.png" alt="Logo" />
           <a id="aArtistas" href="#">Artistas</a>
           <a id="aProducto" href="#">Productos</a>
           <a id="aPrecios" href="#">Precios</a>
