MAS PRACTICA CLIENTE

--- a/CLIENT/PRACTICAS EXTRA/SIMULACRO 2/simulacro2.html
+++ b/CLIENT/PRACTICAS EXTRA/SIMULACRO 2/simulacro2.html
@@ -25,7 +25,10 @@
             </div> -->
     </div>
 
-    <!-- TODO: Cargar el script examen.js -->
+    <!-- TODO: Cargar el script simulacro2.js -->
+    <script type="module"> 
+        import "./simulacro2.js"; 
+    </script>
     
     <template id="formulario-template">
         <form>
