--- a/INTERFACES/ASSIGMENT 6/Práctica3_FlexBox.html
+++ b/INTERFACES/ASSIGMENT 6/Práctica3_FlexBox.html
@@ -16,7 +16,9 @@
     </header>
     <main>
       <nav>
-        <img id="logo" src="Logo.png" alt="Logo" />
+        <a id="aHome" href="#">
+          <img id="logo" src="Logo.png" alt="Logo" />
+        </a>
         <section class="sectionLista">
           <a id="aArtistas" href="#">Artistas</a>
           <a id="aProducto" href="#">Productos</a>
