--- a/INTERFACES/ASSIGMENT 6/Práctica3_FlexBox.html
+++ b/INTERFACES/ASSIGMENT 6/Práctica3_FlexBox.html
@@ -15,51 +15,51 @@
       </section>
     </header>
     <main>
-      <nav>
-        <a id="aHome" href="#">
-          <img id="logo" src="Logo.png" alt="Logo" />
-        </a>
-        <section class="sectionLista">
-          <a id="aArtistas" href="#">Artistas</a>
-          <a id="aProducto" href="#">Productos</a>
-          <a id="aPrecios" href="#">Precios</a>
-          <a id="aClientes" href="#">Clientes</a>
-        </section>
-        <section class="sectionLista">
-          <button id="botonRegistro">Registro</button>
-          <button id="botonInicio">Inicio</button>
-        </section>
-      </nav>
-      <section class="contenidoPrincipal">
-        <article>
-          <h1>Miles de personas ya confían en Festland</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, quos?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, quos?
-            Lorem ipsum dolor sit amet consectetur.
-          </p>
-          <section id="inputArticle">
-            <input
-              id="inputSuscripcion"
-              type="email"
-              placeholder="Tu email"
-              required
-            />
-            <button id="botonSuscripcion">Suscríbete</button>
+        <nav>
+          <a id="aHome" href="#">
+            <img id="logo" src="logo2.png" alt="Logo" />
+          </a>
+          <section class="sectionLista">
+            <a id="aArtistas" href="#">Artistas</a>
+            <a id="aProducto" href="#">Productos</a>
+            <a id="aPrecios" href="#">Precios</a>
+            <a id="aClientes" href="#">Clientes</a>
           </section>
-        </article>
-      </section>
-      <footer>
-        <section class="sectionLista">
-          <p id="aTerminos">Las principales artistas eligen Festland</p>
-          <img id="logoFooter1" src="footer1.png" alt="footer1" />
-          <img id="logoFooter2" src="footer2.png" alt="footer2" />
-          <img id="logoFooter3" src="footer3.png" alt="footer3" />
-          <img id="logoFooter4" src="footer4.png" alt="footer4" />
-          <img id="logoFooter5" src="footer5.png" alt="footer5" />
-          <img id="logoFooter6" src="footer6.png" alt="footer6" />
+          <section class="sectionLista">
+            <button id="botonRegistro">Registro</button>
+            <button id="botonInicio">Inicio</button>
+          </section>
+        </nav>
+        <section class="contenidoPrincipal">
+          <article>
+            <h1>Miles de personas ya confían en Festland</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, quos?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, quos?
+              Lorem ipsum dolor sit amet consectetur.
+            </p>
+            <section id="inputArticle">
+              <input
+                id="inputSuscripcion"
+                type="email"
+                placeholder="Tu email"
+                required
+              />
+              <button id="botonSuscripcion">Suscríbete</button>
+            </section>
+          </article>
         </section>
-      </footer>
+        <footer>
+          <p id="aTerminos">Las principales artistas eligen Festland</p>
+          <section class="sectionLista">
+            <img id="logoFooter1" src="footer1.png" alt="footer1" />
+            <img id="logoFooter2" src="footer2.png" alt="footer2" />
+            <img id="logoFooter3" src="footer3.png" alt="footer3" />
+            <img id="logoFooter4" src="footer4.png" alt="footer4" />
+            <img id="logoFooter5" src="footer5.png" alt="footer5" />
+            <img id="logoFooter6" src="footer6.png" alt="footer6" />
+          </section>
+        </footer>
     </main>
   </body>
 </html>
