--- a/INTERFACES/ASSIGMENT 8/Práctica3_Grid.html
+++ b/INTERFACES/ASSIGMENT 8/Práctica3_Grid.html
@@ -14,31 +14,33 @@
             <a id="aBlog" href="#">Blog</a>
         </section>
     </header>
+    <nav>
+        <a id="aHome" href="#">
+            <img id="logo" src="./assets/logo2.png" alt="Logo" />
+        </a>
+        <section class="sectionLista">
+            <a id="aArtistas" href="#">Artistas</a>
+            <a id="aProducto" href="#">Productos</a>
+            <a id="aPrecios" href="#">Precios</a>
+            <a id="aClientes" href="#">Clientes</a>
+        </section>
+        <section class="sectionLista">
+            <button id="botonRegistro">Registro</button>
+            <button id="botonInicio">Inicio</button>
+        </section>
+    </nav>
     <main>
-        <nav>
-            <a id="aHome" href="#">
-                <img id="logo" src="./assets/logo2.png" alt="Logo" />
-            </a>
-            <section class="sectionLista">
-                <a id="aArtistas" href="#">Artistas</a>
-                <a id="aProducto" href="#">Productos</a>
-                <a id="aPrecios" href="#">Precios</a>
-                <a id="aClientes" href="#">Clientes</a>
-            </section>
-            <section class="sectionLista">
-                <button id="botonRegistro">Registro</button>
-                <button id="botonInicio">Inicio</button>
-            </section>
-        </nav>
         <section class="containerGrid">
-            <article class="f1-2_c1-2">
-                <h2>Inicia tu aventura</h2>
+            <button class="f1-2_c1-2">
+                Inicia tu aventura
+            </button>
+            <article class="f1_c3">
+                <section></section>
             </article>
-            <article class="f1_c3"></article>
             <article class="f1_c4"></article>
-            <article class="f1_c5">
-                <h3>Conoce a los artistas</h3>
-            </article>
+            <button class="f1_c5">
+                Conoce a los artistas
+            </button>
             <article class="f2_c3-4"></article>
             <article class="f2_c5"></article>
             <article class="f3-4_c1-2-3"></article>
@@ -49,9 +51,9 @@
             </article>
             <article class="f5_c1"></article>
             <article class="f5_c2"></article>
-            <article class="f5_c3">
-                <h3>Disfruta tu experiencia</h3>
-            </article>
+            <button class="f5_c3">
+                Disfruta tu experiencia
+            </button>
             <article class="f5_c4"></article>
             <article class="f5_c5"></article>
         </section>
