--- a/INTERFACES/ASSIGMENT 8/index.html
+++ b/INTERFACES/ASSIGMENT 8/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos</title>
-    <link rel="stylesheet" href="./styles.css">
+    <title>Festland</title>
 </head>
 <body>
-    <!-- IMPORTACIÓN DE ELEMENTOS AL BODY MEDIANTE JS Y SUS COMPONENTES -->
-    <script type="module" src="./load_components.js" defer></script>
+        <!-- IMPORTACIÓN DE ELEMENTOS AL HTML MEDIANTE JS -->
+        <script type="module" src="./initial_load.js" defer></script>
 </body>
 </html>
