--- a/INTERFACES/ASSIGMENT 8/index.html
+++ b/INTERFACES/ASSIGMENT 8/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Festland</title>
+
+    <script>
+        // REDIRIGIR A HOME.HTML DE MANERA INMEDIATA
+        window.location.replace("./pages/home/home.html");
+    </script>
+
 </head>
 <body>
-        <!-- IMPORTACIÓN DE ELEMENTOS AL HTML MEDIANTE JS -->
-        <script type="module" src="./initial_load.js" defer></script>
 </body>
 </html>
