--- a/INTERFACES/ASSIGMENT 8/pages/productos/productos.html
+++ b/INTERFACES/ASSIGMENT 8/pages/productos/productos.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../../styles.css">
 </head>
 <body>
-    <!-- IMPORTACIÓN DE ELEMENTOS AL BODY MEDIANTE JS Y SUS COMPONENTES -->
-    <script type="module" src="./load_components.js" defer></script>
+    <!-- EL CONTENIDO DE ESTA PÁGINA SE CARGA DINÁMICAMENTE AL INSTANTE SIN MOSTRAR NADA EN EL CUERPO -->
+    <script type="module" src="../../routing.js"></script>
 </body>
 </html>
