--- a/INTERFACES/ASSIGMENT 10/index.html
+++ b/INTERFACES/ASSIGMENT 10/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pruebas Boostrap</title>
+    <title>Tabla Boostrap</title>
     <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         rel="stylesheet"
@@ -17,69 +17,11 @@
     ></script>
 </head>
 <body>
-    <!-- <div class="container">
-        <div class="row">
-            <div class="col-md-1 font-weight-bold text-white bg-primary">col-md-1</div>
-            <div class="col-md-1 font-weight-bold text-white bg-secondary">col-md-1</div>
-            <div class="col-md-1 font-weight-bold text-white bg-info">col-md-1</div>
-            <div class="col-md-1 font-weight-bold text-white bg-success">col-md-1</div>
-            <div class="col-md-1 font-weight-bold text-white bg-danger">col-md-1</div>
-            <div class="col-md-1 font-weight-bold text-white bg-warning">col-md-1</div>
-            <div class="col-md-1 font-weight-bold text-white bg-primary">col-md-1</div>
-            <div class="col-md-1 font-weight-bold text-white bg-secondary">col-md-1</div>
-            <div class="col-md-1 font-weight-bold text-white bg-info">col-md-1</div>
-            <div class="col-md-1 font-weight-bold text-white bg-success">col-md-1</div>
-            <div class="col-md-1 font-weight-bold text-white bg-danger">col-md-1</div>
-            <div class="col-md-1 font-weight-bold text-white bg-warning">col-md-1</div>
-        </div>
-        <div class="row">
-            <div class="col-md-4 font-weight-bold text-white bg-secondary">col-md-4</div>
-            <div class="col-md-4 font-weight-bold text-white bg-info">col-md-4</div>
-            <div class="col-md-4 font-weight-bold text-white bg-danger">col-md-4</div>
-        </div>
-        <div class="row">
-            <div class="col-md-4 font-weight-bold text-white bg-danger">col-md-4</div>
-            <div class="col-md-8 font-weight-bold text-white bg-warning">col-md-8</div>
-        </div>
-        <div class="row">
-            <div class="col-md-4 font-weight-bold text-white bg-dark">col-md-4</div>
-            <div class="col-md-4 font-weight-bold text-white bg-primary">col-md-4</div>
-            <div class="col-md-4 font-weight-bold text-white bg-secondary">col-md-4</div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 font-weight-bold text-white bg-info">col-md-6</div>
-            <div class="col-md-6 font-weight-bold text-white bg-info">col-md-6</div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 font-weight-bold text-white bg-success">col-md-12</div>
-        </div>
-
-
-        <h1>-----------------------------</h1>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-xs-12 col-md-8 font-weight-bold text-white bg-primary">col-xs-12 col-md-8</div>
-                <div class="col-xs-6 col-md-4 font-weight-bold text-white bg-secondary">col-xs-6 col-md-4</div>
-            </div>
-            <h1>-----------------------------</h1>
-            <div class="row">
-                <div class="col-xs-6 p-1 col-md-4 p-md-4 font-weight-bold text-white bg-warning">col-xs-6 col-md-4</div>
-                <div class="col-xs-6 p-1 col-md-4 p-md-4 font-weight-bold text-white bg-danger">col-xs-6 col-md-4</div>
-                <div class="col-xs-6 p-1 col-md-4 p-md-4 font-weight-bold text-white bg-info">col-xs-6 col-md-4</div>
-            </div>
-            <h1>-----------------------------</h1>
-            <div class="row">
-                <div class="col-xs-6 font-weight-bold text-white bg-primary">col-xs-6</div>
-                <div class="col-xs-6 font-weight-bold text-white bg-secondary">col-xs-6</div>
-            </div>
-            <h1>-----------------------------</h1> -->
-
-    <!-- Ejemplo Tabla -->
     <div class="container-fluid p-4">
         <h1 class="text-primary">Listado de Usuarios del Sistema</h1>
         <div class="container-fluid p-3">
 
-            <!-- Formulario de Selección y Búsqueda -->
+            <!-- FORMULARIO DE SELECCIÓN Y BÚSQUEDA -->
             <div class="row mb-3">
                 <form class="d-flex" id="formBusqueda">
                     <div class="col-md-3 col-xs-6 d-flex align-items-center">
@@ -99,7 +41,7 @@
                 </form>
             </div>
 
-            <!-- Tabla -->
+            <!-- TABLA -->
             <table class="table table-striped table-bordered table-hover" id="tablaUsuarios">
                 <thead>
                     <tr>
@@ -139,13 +81,13 @@
                         <td>
                             <div class="btn-group" role="group">
                                 <button type="button" class="btn btn-primary py-2 px-3 rounded-start-1" aria-label="Ver Detalles">
-                                    <img src="watch.svg" alt="watch" class="img-fluid btn-close-white" width="25" height="25"/>
+                                    <img src="./assets/watch.svg" alt="watch" class="img-fluid btn-close-white" width="25" height="25"/>
                                 </button>
                                 <button type="button" class="btn btn-success py-2 px-3 rounded-0" aria-label="Editar">
-                                    <img src="edit.svg" alt="edit" class="img-fluid btn-close-white" width="25" height="25"/>
+                                    <img src="./assets/edit.svg" alt="edit" class="img-fluid btn-close-white" width="25" height="25"/>
                                 </button>
                                 <button type="button" class="btn btn-danger py-2 px-3 rounded-end-1" aria-label="Eliminar">
-                                    <img src="delete.svg" alt="delete" class="img-fluid btn-close-white" width="25" height="25"/>
+                                    <img src="./assets/delete.svg" alt="delete" class="img-fluid btn-close-white" width="25" height="25"/>
                                 </button>
                             </div>
                         </td>
@@ -158,13 +100,13 @@
                         <td>
                             <div class="btn-group" role="group">
                                 <button type="button" class="btn btn-primary py-2 px-3 rounded-start-1" aria-label="Ver Detalles">
-                                    <img src="watch.svg" alt="watch" class="img-fluid btn-close-white" width="25" height="25"/>
+                                    <img src="./assets/watch.svg" alt="watch" class="img-fluid btn-close-white" width="25" height="25"/>
                                 </button>
                                 <button type="button" class="btn btn-success py-2 px-3 rounded-0" aria-label="Editar">
-                                    <img src="edit.svg" alt="edit" class="img-fluid btn-close-white" width="25" height="25"/>
+                                    <img src="./assets/edit.svg" alt="edit" class="img-fluid btn-close-white" width="25" height="25"/>
                                 </button>
                                 <button type="button" class="btn btn-danger py-2 px-3 rounded-end-1" aria-label="Eliminar">
-                                    <img src="delete.svg" alt="delete" class="img-fluid btn-close-white" width="25" height="25"/>
+                                    <img src="./assets/delete.svg" alt="delete" class="img-fluid btn-close-white" width="25" height="25"/>
                                 </button>
                             </div>
                         </td>
@@ -177,13 +119,13 @@
                         <td>
                             <div class="btn-group" role="group">
                                 <button type="button" class="btn btn-primary py-2 px-3 rounded-start-1" aria-label="Ver Detalles">
-                                    <img src="watch.svg" alt="watch" class="img-fluid btn-close-white" width="25" height="25"/>
+                                    <img src="./assets/watch.svg" alt="watch" class="img-fluid btn-close-white" width="25" height="25"/>
                                 </button>
                                 <button type="button" class="btn btn-success py-2 px-3 rounded-0" aria-label="Editar">
-                                    <img src="edit.svg" alt="edit" class="img-fluid btn-close-white" width="25" height="25"/>
+                                    <img src="./assets/edit.svg" alt="edit" class="img-fluid btn-close-white" width="25" height="25"/>
                                 </button>
                                 <button type="button" class="btn btn-danger py-2 px-3 rounded-end-1" aria-label="Eliminar">
-                                    <img src="delete.svg" alt="delete" class="img-fluid btn-close-white" width="25" height="25"/>
+                                    <img src="./assets/delete.svg" alt="delete" class="img-fluid btn-close-white" width="25" height="25"/>
                                 </button>
                             </div>
                         </td>
@@ -196,13 +138,13 @@
                         <td>
                             <div class="btn-group" role="group">
                                 <button type="button" class="btn btn-primary py-2 px-3 rounded-start-1" aria-label="Ver Detalles">
-                                    <img src="watch.svg" alt="watch" class="img-fluid btn-close-white" width="25" height="25"/>
+                                    <img src="./assets/watch.svg" alt="watch" class="img-fluid btn-close-white" width="25" height="25"/>
                                 </button>
                                 <button type="button" class="btn btn-success py-2 px-3 rounded-0" aria-label="Editar">
-                                    <img src="edit.svg" alt="edit" class="img-fluid btn-close-white" width="25" height="25"/>
+                                    <img src="./assets/edit.svg" alt="edit" class="img-fluid btn-close-white" width="25" height="25"/>
                                 </button>
                                 <button type="button" class="btn btn-danger py-2 px-3 rounded-end-1" aria-label="Eliminar">
-                                    <img src="delete.svg" alt="delete" class="img-fluid btn-close-white" width="25" height="25"/>
+                                    <img src="./assets/delete.svg" alt="delete" class="img-fluid btn-close-white" width="25" height="25"/>
                                 </button>
                             </div>
                         </td>
@@ -215,13 +157,13 @@
                         <td>
                             <div class="btn-group" role="group">
                                 <button type="button" class="btn btn-primary py-2 px-3 rounded-start-1" aria-label="Ver Detalles">
-                                    <img src="watch.svg" alt="watch" class="img-fluid btn-close-white" width="25" height="25"/>
+                                    <img src="./assets/watch.svg" alt="watch" class="img-fluid btn-close-white" width="25" height="25"/>
                                 </button>
                                 <button type="button" class="btn btn-success py-2 px-3 rounded-0" aria-label="Editar">
-                                    <img src="edit.svg" alt="edit" class="img-fluid btn-close-white" width="25" height="25"/>
+                                    <img src="./assets/edit.svg" alt="edit" class="img-fluid btn-close-white" width="25" height="25"/>
                                 </button>
                                 <button type="button" class="btn btn-danger py-2 px-3 rounded-end-1" aria-label="Eliminar">
-                                    <img src="delete.svg" alt="delete" class="img-fluid btn-close-white" width="25" height="25"/>
+                                    <img src="./assets/delete.svg" alt="delete" class="img-fluid btn-close-white" width="25" height="25"/>
                                 </button>
                             </div>
                         </td>
@@ -234,13 +176,13 @@
                         <td>
                             <div class="btn-group" role="group">
                                 <button type="button" class="btn btn-primary py-2 px-3 rounded-start-1" aria-label="Ver Detalles">
-                                    <img src="watch.svg" alt="watch" class="img-fluid btn-close-white" width="25" height="25"/>
+                                    <img src="./assets/watch.svg" alt="watch" class="img-fluid btn-close-white" width="25" height="25"/>
                                 </button>
                                 <button type="button" class="btn btn-success py-2 px-3 rounded-0" aria-label="Editar">
-                                    <img src="edit.svg" alt="edit" class="img-fluid btn-close-white" width="25" height="25"/>
+                                    <img src="./assets/edit.svg" alt="edit" class="img-fluid btn-close-white" width="25" height="25"/>
                                 </button>
                                 <button type="button" class="btn btn-danger py-2 px-3 rounded-end-1" aria-label="Eliminar">
-                                    <img src="delete.svg" alt="delete" class="img-fluid btn-close-white" width="25" height="25"/>
+                                    <img src="./assets/delete.svg" alt="delete" class="img-fluid btn-close-white" width="25" height="25"/>
                                 </button>
                             </div>
                         </td>
@@ -253,13 +195,13 @@
                         <td>
                             <div class="btn-group" role="group">
                                 <button type="button" class="btn btn-primary py-2 px-3 rounded-start-1" aria-label="Ver Detalles">
-                                    <img src="watch.svg" alt="watch" class="img-fluid btn-close-white" width="25" height="25"/>
+                                    <img src="./assets/watch.svg" alt="watch" class="img-fluid btn-close-white" width="25" height="25"/>
                                 </button>
                                 <button type="button" class="btn btn-success py-2 px-3 rounded-0" aria-label="Editar">
-                                    <img src="edit.svg" alt="edit" class="img-fluid btn-close-white" width="25" height="25"/>
+                                    <img src="./assets/edit.svg" alt="edit" class="img-fluid btn-close-white" width="25" height="25"/>
                                 </button>
                                 <button type="button" class="btn btn-danger py-2 px-3 rounded-end-1" aria-label="Eliminar">
-                                    <img src="delete.svg" alt="delete" class="img-fluid btn-close-white" width="25" height="25"/>
+                                    <img src="./assets/delete.svg" alt="delete" class="img-fluid btn-close-white" width="25" height="25"/>
                                 </button>
                             </div>
                         </td>
@@ -267,7 +209,7 @@
                 </tbody>
             </table>
 
-            <!-- Registros y paginación -->
+            <!-- REGISTROS Y PAGINACIÓN -->
             <div class="row">
                 <div class="align-items-center d-flex">
                     <div class="col-md-7" id="textoRegistros"></div>
@@ -290,7 +232,7 @@
             <button class="btn btn-primary px-4">Agregar Usuario</button>
         </div>
     
-    <!-- </div> -->
-    <script src="search_filter.js" defer></script>
+    <!-- SCRIPT DE BÚSQUEDA -->
+    <script src="./scripts/search_filter.js" defer></script>
 </body>
 </html>
